# LLMAnalizerXML

./: .env.sample  .gitignore  README.md  docker-compose.yml
analizer/: .env.sample  pyproject.toml
analizer/api_v1/: routers.py
analizer/api_v1/llm_answers/: dao.py  schemas.py  views.py
analizer/api_v1/products/: dao.py  schemas.py  views.py
analizer/api_v1/tests/: conftest.py  test_products.py
analizer/app_includes/: logs_errors.py
analizer/async_alembic/: env.py
analizer/async_alembic/versions/: 2024_11_24_1807-2ce5c84d86c4_add_product.py
analizer/config/: config.py
analizer/config/celery/: connection.py
analizer/config/dao/: base_dao.py
analizer/config/models/: __init__.py  base.py  llm_answers.py  products.py
analizer/docker/fastapi/: Dockerfile  start
analizer/parsers/: __init__.py  type_converters.py  xml_parser.py
analizer/parsers/base_converter/: __init__.py  abc.py  base_converter.py  exeptions.py  utils.py
analizer/parsers/base_parser/: __init__.py  abc.py  base_xml.py  exeptions.py  parse_except.py
analizer/task_schedule/: promts.py  task_types.py  tasks.py  utils.py
llm/: .env.sample  main.py  pyproject.toml
llm/api_v1/: routers.py
llm/api_v1/api_analyst/: schemas.py  views.py
llm/app_includes/: middlewares.py
llm/config/: config.py
llm/docker/llm/: Dockerfile  entrypoint  start
llm/llm_analizer/: __init__.py  llm.py
xml/: .env.sample  items.xml  main.py  pyproject.toml
xml/api_v1/: exeptions.py  regex.py  renders.py  routers.py  utils.py
xml/app_includes/: logs_errors.py
xml/config/: __init__.py  config.py
(+7 files in other folders)
